--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -12,33 +12,15 @@ $light-warm: #f4f4f4;
 $light-cool: #eaedf0;
 
 .App {
-    text-align: center;
-}
-/*  link styles */
-a, a:hover, a:active, a:focus {
-  text-decoration: none;
-  color: $dark;
 }
 
-a {
-  position: relative;
-  &:after {
-    content: '';
-    display: block;
-    width: 100%;
-    height: 0.2em;
-    background: $accent-warm;
-    transition: width .3s;
-    margin-top: 2px;
-  }
-  &:hover {
-    &:after {
-      width: 80%;
-    }
-  }
+/*  LAYOUT  */
+
+section {
+  height: 100vh;
+  display: block;
 }
 
-/*  layout  */
 canvas {
   display: block;
   width: 100%;
@@ -50,7 +32,86 @@ canvas {
   z-index: -1;
 }
 
-/*  nav styles  */
+/* TEXT STYLES */
+body {
+  padding-bottom: 30px;
+  font: 150% $font-body;
+  margin: 0;
+  background-color: $light-warm;
+
+  p, h1, h2, h3, h4 {
+    color: $dark;
+  }
+
+  p {
+    letter-spacing: 1px;
+  }
+
+  h1 {
+    font: 400% $font-title;
+    font-weight: 800;
+    letter-spacing: 2px;
+  }
+
+  h2 {
+    font: 300% $font-title;
+    font-weight: 600;
+    line-height: 1.2em;
+  }
+
+  h3 {
+    font: 180% $font-title;
+    font-weight: 600;
+    line-height: 1.3ss em;
+  }
+
+  h4 {
+    font: 150% $font-title;
+    font-weight: 400;
+  }
+
+  span {
+    display: inline-block;
+  }
+
+  ul {
+    list-style: none;
+    padding: 0;
+  }
+
+  .inline-list {
+    li {
+      display: inline-block;
+      padding-right: 1em;
+    }
+  }
+
+  /*  LINK STYLES */
+  a, a:hover, a:active, a:focus {
+    text-decoration: none;
+    color: $dark;
+  }
+
+  a {
+    position: relative;
+    &:after {
+      content: '';
+      display: block;
+      width: 100%;
+      height: 0.2em;
+      background: $accent-cool;
+      transition: width .3s;
+      margin-top: 1px;
+    }
+    &:hover {
+      &:after {
+        width: 80%;
+      }
+    }
+  }
+}
+
+/*  NAV STYLES  */
 nav {
   float: none;
   width: 100%;
@@ -84,6 +145,13 @@ nav {
     #home {
       float: left;
     }
+  }
+}
 
+/*  ABOUT STYLES  */
+#about-section {
+  background-color: $accent-warm;
+  a, h2, h3 {
+    color: $white;
   }
 }
