--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -117,7 +117,7 @@ nav {
   width: 100%;
   background-color: $accent-warm;
   padding: 2em;
-  box-shadow: 0px 2px 2px $dark;
+  box-shadow: 0px 2px 2px darken($accent-warm, 5%);
 
   a {
     color: $white;
@@ -144,6 +144,7 @@ nav {
 
     #home {
       float: left;
+      a:hover:after { width:0; }
     }
   }
 }
